crates/tools/src/LSP/src/snapshots/kcl_language_server__hover__tests__assignment_ty_in_lambda_hover.snap
---
source: crates/tools/src/LSP/src/hover.rs
expression: "format! (\"{:#?}\", res)"
---
Some(
    Hover {
        contents: Scalar(
            LanguageString(
                LanguageString {
                    language: "KCL",
                    value: "result: {str:str}",
                },
            ),
        ),
        range: None,
    },
)
