crates/tools/src/LSP/src/snapshots/kcl_language_server__hover__tests__complex_select_hover.snap
---
source: crates/tools/src/LSP/src/hover.rs
expression: "format! (\"{:#?}\", res)"
---
Some(
    Hover {
        contents: Scalar(
            LanguageString(
                LanguageString {
                    language: "KCL",
                    value: "value: int",
                },
            ),
        ),
        range: None,
    },
)
