crates/tools/src/LSP/src/snapshots/kcl_language_server__hover__tests__dict_key_in_schema_expr.snap
---
source: crates/tools/src/LSP/src/hover.rs
expression: "format! (\"{:#?}\", res)"
---
Some(
    Hover {
        contents: Scalar(
            LanguageString(
                LanguageString {
                    language: "KCL",
                    value: "name: int",
                },
            ),
        ),
        range: None,
    },
)
