crates/tools/src/LSP/src/snapshots/kcl_language_server__hover__tests__import_pkg_hover.snap
---
source: crates/tools/src/LSP/src/hover.rs
expression: "format! (\"{:#?}\", res)"
---
Some(
    Hover {
        contents: Array(
            [
                String(
                    "fib",
                ),
                LanguageString(
                    LanguageString {
                        language: "KCL",
                        value: "schema Fib:\n    n: int\n    value: int",
                    },
                ),
            ],
        ),
        range: None,
    },
)
