crates/tools/src/LSP/src/snapshots/kcl_language_server__hover__tests__lambda_doc_hover_test.snap
---
source: crates/tools/src/LSP/src/hover.rs
expression: "format! (\"{:#?}\", res)"
---
Some(
    Hover {
        contents: Array(
            [
                LanguageString(
                    LanguageString {
                        language: "KCL",
                        value: "function f(x: int = 1) -> int",
                    },
                ),
                String(
                    "lambda documents",
                ),
            ],
        ),
        range: None,
    },
)
