crates/tools/src/LSP/src/snapshots/kcl_language_server__hover__tests__schema_doc_hover_attr_test.snap
---
source: crates/tools/src/LSP/src/hover.rs
expression: "format! (\"{:#?}\", res)"
---
Some(
    Hover {
        contents: Scalar(
            LanguageString(
                LanguageString {
                    language: "KCL",
                    value: "name: str",
                },
            ),
        ),
        range: None,
    },
)
